--- a/passworddialog.ui
+++ b/passworddialog.ui
@@ -22,19 +22,19 @@
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <layout class="QGridLayout" name="gridLayout">
-     <item row="0" column="0">
+     <item row="0" column="0" rowspan="2" alignment="Qt::AlignHCenter|Qt::AlignVCenter">
       <widget class="QLabel" name="iconL">
        <property name="text">
         <string/>
        </property>
       </widget>
      </item>
-     <item row="0" column="1">
+     <item row="0" column="1" alignment="Qt::AlignVCenter">
       <widget class="QLabel" name="descriptionL">
        <property name="text">
         <string/>
        </property>
-       <property name="scaledContents">
+       <property name="wordWrap">
         <bool>true</bool>
        </property>
       </widget>
