--- a/passworddialog.ui
+++ b/passworddialog.ui
@@ -10,12 +10,6 @@
     <height>200</height>
    </rect>
   </property>
-  <property name="sizePolicy">
-   <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-    <horstretch>0</horstretch>
-    <verstretch>0</verstretch>
-   </sizepolicy>
-  </property>
   <property name="windowTitle">
    <string>LXQt sudo</string>
   </property>
@@ -31,6 +25,12 @@
      </item>
      <item row="0" column="1" alignment="Qt::AlignVCenter">
       <widget class="QLabel" name="descriptionL">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="MinimumExpanding" vsizetype="MinimumExpanding">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
        <property name="text">
         <string/>
        </property>
