--- a/passworddialog.ui
+++ b/passworddialog.ui
@@ -2,42 +2,58 @@
 <ui version="4.0">
  <class>PasswordDialog</class>
  <widget class="QDialog" name="PasswordDialog">
-  <property name="geometry">
-   <rect>
-    <x>0</x>
-    <y>0</y>
-    <width>400</width>
-    <height>200</height>
-   </rect>
-  </property>
   <property name="windowTitle">
    <string>LXQt sudo</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <layout class="QGridLayout" name="gridLayout">
-     <item row="0" column="0" rowspan="2" alignment="Qt::AlignHCenter|Qt::AlignVCenter">
-      <widget class="QLabel" name="iconL">
-       <property name="text">
-        <string/>
+     <item row="2" column="1">
+      <layout class="QHBoxLayout" name="commandLayout">
+       <property name="spacing">
+        <number>0</number>
        </property>
-      </widget>
-     </item>
-     <item row="0" column="1" alignment="Qt::AlignVCenter">
-      <widget class="QLabel" name="descriptionL">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="MinimumExpanding" vsizetype="MinimumExpanding">
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
-       </property>
-       <property name="text">
-        <string/>
-       </property>
-       <property name="wordWrap">
-        <bool>true</bool>
-       </property>
-      </widget>
+       <item>
+        <widget class="QLabel" name="commandL">
+         <property name="minimumSize">
+          <size>
+           <width>1</width>
+           <height>0</height>
+          </size>
+         </property>
+         <property name="frameShape">
+          <enum>QFrame::Panel</enum>
+         </property>
+         <property name="frameShadow">
+          <enum>QFrame::Sunken</enum>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="Line" name="line_2">
+         <property name="orientation">
+          <enum>Qt::Vertical</enum>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QToolButton" name="commandCopyBtn">
+         <property name="toolTip">
+          <string>Copy command to clipboard</string>
+         </property>
+         <property name="text">
+          <string>&amp;Copy</string>
+         </property>
+         <property name="icon">
+          <iconset theme="edit-copy">
+           <normaloff>.</normaloff>.</iconset>
+         </property>
+         <property name="toolButtonStyle">
+          <enum>Qt::ToolButtonIconOnly</enum>
+         </property>
+        </widget>
+       </item>
+      </layout>
      </item>
      <item row="1" column="1">
       <widget class="QLabel" name="errorL">
@@ -47,46 +63,75 @@
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
+      </widget>
+     </item>
+     <item row="0" column="1" alignment="Qt::AlignVCenter">
+      <widget class="QLabel" name="descriptionL">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="MinimumExpanding" vsizetype="MinimumExpanding">
+         <horstretch>0</horstretch>
+         <verstretch>1</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="minimumSize">
+        <size>
+         <width>230</width>
+         <height>0</height>
+        </size>
+       </property>
        <property name="text">
-        <string/>
+        <string>The requested action needs administrative privileges.&lt;br&gt;Please enter your password.</string>
+       </property>
+       <property name="wordWrap">
+        <bool>true</bool>
        </property>
       </widget>
      </item>
-     <item row="2" column="1">
-      <widget class="QLabel" name="commandL">
+     <item row="0" column="0">
+      <widget class="QLabel" name="iconL">
+       <property name="alignment">
+        <set>Qt::AlignCenter</set>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="0">
+      <widget class="QLabel" name="backendL">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
-       <property name="text">
-        <string/>
+       <property name="toolTip">
+        <string>LXQt sudo backend</string>
+       </property>
+       <property name="whatsThis">
+        <string>A program LXQt sudo calls in background to elevate priveledges.</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignCenter</set>
        </property>
       </widget>
      </item>
      <item row="2" column="0">
       <widget class="QLabel" name="descCommandL">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
-       </property>
        <property name="text">
         <string>Command:</string>
        </property>
       </widget>
      </item>
-     <item row="4" column="0">
+     <item row="3" column="0" rowspan="2">
       <widget class="QLabel" name="descPasswordL">
        <property name="text">
         <string>Password:</string>
        </property>
       </widget>
      </item>
-     <item row="4" column="1">
+     <item row="3" column="1" rowspan="2">
       <widget class="QLineEdit" name="passwordLE">
+       <property name="toolTip">
+        <string>Enter password</string>
+       </property>
        <property name="echoMode">
         <enum>QLineEdit::Password</enum>
        </property>
@@ -103,6 +148,9 @@
    </item>
    <item>
     <widget class="QDialogButtonBox" name="buttonBox">
+     <property name="focusPolicy">
+      <enum>Qt::TabFocus</enum>
+     </property>
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
      </property>
@@ -113,6 +161,11 @@
    </item>
   </layout>
  </widget>
+ <tabstops>
+  <tabstop>passwordLE</tabstop>
+  <tabstop>buttonBox</tabstop>
+  <tabstop>commandCopyBtn</tabstop>
+ </tabstops>
  <resources/>
  <connections>
   <connection>
