--- a/passworddialog.ui
+++ b/passworddialog.ui
@@ -106,7 +106,7 @@
         <string>LXQt sudo backend</string>
        </property>
        <property name="whatsThis">
-        <string>A program LXQt sudo calls in background to elevate priveledges.</string>
+        <string>A program LXQt sudo calls in background to elevate privileges.</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
